apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - name: http
      port: 80
      targetPort: 9000
  type: ClusterIP
